--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     scroll-behavior: smooth;
 }
 
+
 header {
     background-color: #f0f0f0;
     width: 100%;
@@ -36,7 +37,7 @@ header {
 }
 
 .navigation a:hover{
-    color: #1cfc8c;
+    color: #1dbb08;
 }
 
 section{
